Fixed navbar brand alignment issue

--- a/src/scss/components/navbar/_styling.scss
+++ b/src/scss/components/navbar/_styling.scss
@@ -44,7 +44,8 @@
 }
 
 @mixin navbar-brand-base {
-    display: block;
+    display: flex;
+    align-items: center;
     font-size: 2em;
     padding: 0.3em 0.6em;
     text-decoration: none;
